# OllamaPilot

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_v0.2.7.md  main.py  pyproject.toml  test_extract.py  test_output.txt  test_pattern.py  test_tool_filter.py  test_word_aligner.py  命令自动补全功能分析.md
base_agent/: __init__.py  agent.py
base_agent/middleware/: __init__.py  base.py  context_compress.py  context_editor.py  context_inject.py  dangling_tool.py  memory.py  react_guide.py  skill_loader.py  tool_format.py  tool_retry.py
base_agent/model/: __init__.py  ollama_client.py  streaming.py  utils.py
base_agent/skill/: __init__.py  chunker.py  registry.py  router.py  skill.py
base_agent/tool/: __init__.py  loader.py
channels/: DESIGN.md  __init__.py  base.py  config.example.yaml  config.yaml  config.yaml.example  dingtalk.py  feishu.py  history_manager.py  qq.py  registry.py  renderers.py  runner.py  session_manager.py
config/dictionaries/: README.md  custom.json  finance.json  global.json  legal.json  medical.json  tcm.json  technology.json
examples/: auto_load_skills.py  large_skill_example.py  model_driven_demo.py
ollamapilot/: __init__.py  agent.py  config.py  logging_config.py  model_context.py  models.py  ollama_lock.py  skill_middleware.py
ollamapilot/cli/: __init__.py  chat_manager.py  completer.py  history_manager.py  session.py  session_store.py
ollamapilot/context/: __init__.py  builder.py  compactor.py  optimizer.py  types.py
ollamapilot/harness/: __init__.py  agent.py
ollamapilot/harness/context/: __init__.py  state.py  wrapper.py
ollamapilot/harness/memory/: __init__.py  enhanced.py  extractor.py
ollamapilot/harness/middlewares/: __init__.py  base.py  chain.py  clarification.py  compaction.py  context_injection.py  memory_retrieval.py
ollamapilot/harness/sandbox/: __init__.py  base.py  local.py
ollamapilot/harness/subagents/: __init__.py  base.py  factory.py
ollamapilot/harness/tools/: __init__.py  adapter.py  base.py  registry.py
ollamapilot/infra/: __init__.py  checkpoint.py  embeddings.py  optimized_checkpoint.py
ollamapilot/memory/: __init__.py  indexer.py  manager.py  markdown_storage.py  system_memory.py  types.py
ollamapilot/middlewares/: __init__.py  compaction.py  context_injection.py  memory_retrieval.py
ollamapilot/skills/: __init__.py  base.py  default_skill.py  loader.py  registry.py
ollamapilot/tools/: __init__.py  builtin.py  mcp_tools.py
ollamapilot/tools/custom/: __init__.py
ollamapilot/utils/: file_processor.py
skills/: README.md  __init__.py
skills/deep_research/: SKILL.md  __init__.py  state.py  tools.py
skills/enhanced_search/: SKILL.md  __init__.py  aggregator.py  engine_router.py  quota_manager.py  tools.py
skills/enhanced_search/engines/: __init__.py  arxiv.py  baidu.py  baidu_baike.py  base.py  bing.py  brave.py  duckduckgo.py  github.py  pubmed.py  searxng.py  serper.py  tavily.py  wikipedia.py
skills/graphrag/: SKILL.md  dictionary_manager.py  document_manager.py  knowledge_base.py  llm_client.py  middleware.py  skill.py  tools.py  word_aligner.py
skills/graphrag/services/: __init__.py  dual_retrieval.py  embedding_function.py  entity_extractor.py  gleaning_extractor.py  graphrag_service.py  (+5 more)
skills/python_solver/: SKILL.md  skill.py
skills/weather/: SKILL.md
skills/web/: SKILL.md  docker-compose.yml  setup-searxng.ps1  skill.py
skills/web_search/: SKILL.md
tests/: test_agent.py  test_enhanced_search.py  test_registry.py  test_skill.py  test_system.py
tools/: __init__.py  registry.py
tools/builtin/: __init__.py  code.py  filesystem.py  shell.py
(+13 files in other folders)
