[project]
name = "ollamapilot"
version = "0.3.2"
description = "基于 LangChain 1.0+ 的 Ollama 智能助手 - 模块化、可扩展、小模型优化"
readme = "README.md"
license = "MIT"
authors = [
    {name = "OllamaPilot Team"}
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "langchain>=1.0.0",
    "langchain-core>=1.0.0",
    "langchain-ollama>=0.1.0",
    "langgraph>=0.2.0",
    "pydantic>=2.7.0",
    "pyyaml>=6.0.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ollamapilot*"]
exclude = ["tests*", "skills*", "langchain*", "deer-flow*", "base_agent*", "tools*", "examples*"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
